<resources>
    <string name="app_name">OrderFoodApp</string>
    <string name="tenDangNhap">Tên đăng nhập</string>
    <string name="nhapMatKhau">Nhập mật khẩu</string>
    <string name="nhapNgaySinh">Nhập ngày sinh</string>
    <string name="nhapEmail">Nhập địa chỉ email</string>
    <string name="dongY">Đồng ý</string>
    <string name="thoat">Thoát</string>
    <string name="dangKy">Đăng Ký</string>
    <string name="xacNhanMatKhau">Xác nhận mật khẩu</string>
    <string name="dangNhap">Đăng Nhập</string>
    <string name="nav_addfood">Thêm món ăn</string>
    <string name="nav_suaxoamonan">Sửa và xoá món ăn</string>
    <string name="nav_baocao">Báo Cáo Cuối Ngày</string>
    <string name="nav_open">Drawer Open</string>
    <string name="nav_close">Drawer Close</string>
    <string name="home">Quản Lý Bàn</string>
    <string name="bill">Hóa Đơn Bàn Ăn</string>


    <string name="tenKhachHang">Tên người dùng</string>
    <string name="email">user@example.com</string>
    <string name="btnEditProfile">Chỉnh sửa thông tin</string>
    <string name="btnChangePassword">Đổi mật khẩu</string>
    <string name="btnHistory">Lịch sử đặt hàng</string>
    <string name="btnLogout">Đăng xuất</string>

    <string name="priceCarrt">Tổng </string>
    <string name="title_activity_nhan_vien">NhanVienActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nhân Viên</string>
    <string name="nav_header_subtitle">staff@example.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="quanliban">Quản lí bàn</string>
    <string name="quanlidonhang">Quản lí đơn hàng</string>

    <string name="menu_quanlibanan">Quản lí bàn ăn</string>
    <string name="menu_quanlidonhang">Quản lí đơn hàng</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>
