<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
            android:id="@+id/userNameProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tenKhachHang"
            android:layout_marginTop="@dimen/size8dp"
            android:textSize="@dimen/size16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/emailProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="@dimen/size16sp"
        app:layout_constraintTop_toBottomOf="@id/userNameProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size16dp"
        android:text="@string/btnEditProfile"
        app:layout_constraintTop_toBottomOf="@id/emailProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnChangePassword"
        android:layout_marginTop="@dimen/size8dp"
        app:layout_constraintTop_toBottomOf="@id/btnEditProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btnOrderHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnHistory"
        android:layout_marginTop="@dimen/size8dp"
        app:layout_constraintTop_toBottomOf="@id/btnChangePassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>