<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size16dp">

        <!-- Tiêu đề -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size32dp"
            android:padding="@dimen/size10dp"
            android:text="@string/dangKy"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSize30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Khung nhập thông tin -->
        <LinearLayout
            android:id="@+id/lnKhungDangKy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size50dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Giữ nguyên các ô nhập liệu của bạn -->
            <EditText
                android:id="@+id/edtTenDN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size10dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="@dimen/size10dp"
                android:hint="@string/tenDangNhap"
                android:padding="@dimen/size10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

            <EditText
                android:id="@+id/edtMatKhau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size10dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="@dimen/size10dp"
                android:hint="@string/nhapMatKhau"
                android:inputType="textPassword"
                android:padding="@dimen/size10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

            <EditText
                android:id="@+id/edtXacNhanMatKhau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size10dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="@dimen/size10dp"
                android:hint="@string/xacNhanMatKhau"
                android:inputType="textPassword"
                android:padding="@dimen/size10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

            <RadioGroup
                android:id="@+id/radGroupGioiTinh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radGioiTinhNam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size50dp"
                    android:text="Nam"
                    android:textSize="@dimen/textSize20sp" />

                <RadioButton
                    android:id="@+id/radGioiTinhNu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size50dp"
                    android:text="Nữ"
                    android:textSize="@dimen/textSize20sp" />
            </RadioGroup>

            <EditText
                android:id="@+id/edtNgaySinh"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size56dp"
                android:layout_margin="@dimen/size10dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/calendar"
                android:drawablePadding="@dimen/size10dp"
                android:hint="@string/nhapNgaySinh"
                android:padding="@dimen/size10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size10dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/gmail_48x48"
                android:drawablePadding="@dimen/size10dp"
                android:hint="@string/nhapEmail"
                android:padding="@dimen/size10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/size16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Nút Đăng nhập -->
            <Button
                android:id="@+id/btnDangNhap"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:padding="@dimen/size10dp"
                android:text="@string/dangNhap" />

            <!-- Nút Đồng ý -->
            <Button
                android:id="@+id/btnDongY"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/lime"
                android:padding="@dimen/size10dp"
                android:text="@string/dongY" />

            <!-- Nút Thoát -->
            <Button
                android:id="@+id/btnThoat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/organe"
                android:padding="@dimen/size10dp"
                android:text="@string/thoat" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<ScrollView-->
    <!--    android:layout_width="match_parent"-->
    <!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    xmlns:tools="http://schemas.android.com/tools"-->
    <!--    android:layout_height="match_parent"-->
    <!--    android:fillViewport="true">-->

    <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
    <!--        android:id="@+id/main"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:padding="@dimen/size16dp">-->

    <!--        <TextView-->
    <!--            android:id="@+id/textView"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginTop="@dimen/size32dp"-->
    <!--            android:padding="@dimen/size10dp"-->
    <!--            android:text="@string/dangKy"-->
    <!--            android:textColor="@android:color/black"-->
    <!--            android:textSize="@dimen/textSize30sp"-->
    <!--            android:textStyle="bold"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toTopOf="parent"/>-->

    <!--        <LinearLayout-->
    <!--            android:id="@+id/lnKhungDangKy"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginTop="@dimen/size50dp"-->
    <!--            android:orientation="vertical"-->
    <!--            app:layout_constraintTop_toBottomOf="@id/textView"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintEnd_toEndOf="parent">-->

    <!--            <EditText-->
    <!--                android:id="@+id/edtTenDN"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_margin="@dimen/size10dp"-->
    <!--                android:background="@color/white"-->
    <!--                android:drawableLeft="@drawable/user"-->
    <!--                android:drawablePadding="@dimen/size10dp"-->
    <!--                android:hint="@string/tenDangNhap"-->
    <!--                android:padding="@dimen/size10dp"-->
    <!--                android:singleLine="true"-->
    <!--                android:textColor="@color/black"-->
    <!--                android:textColorHint="@color/gray"/>-->

    <!--            <EditText-->
    <!--                android:id="@+id/edtMatKhau"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_margin="@dimen/size10dp"-->
    <!--                android:background="@color/white"-->
    <!--                android:drawableLeft="@drawable/password"-->
    <!--                android:drawablePadding="@dimen/size10dp"-->
    <!--                android:hint="@string/nhapMatKhau"-->
    <!--                android:inputType="textPassword"-->
    <!--                android:padding="@dimen/size10dp"-->
    <!--                android:singleLine="true"-->
    <!--                android:textColor="@color/black"-->
    <!--                android:textColorHint="@color/gray"/>-->

    <!--            <EditText-->
    <!--                android:id="@+id/edtXacNhanMatKhau"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_margin="@dimen/size10dp"-->
    <!--                android:background="@color/white"-->
    <!--                android:drawableLeft="@drawable/password"-->
    <!--                android:drawablePadding="@dimen/size10dp"-->
    <!--                android:hint="@string/xacNhanMatKhau"-->
    <!--                android:inputType="textPassword"-->
    <!--                android:padding="@dimen/size10dp"-->
    <!--                android:singleLine="true"-->
    <!--                android:textColor="@color/black"-->
    <!--                android:textColorHint="@color/gray"/>-->

    <!--            <RadioGroup-->
    <!--                android:id="@+id/radGroupGioiTinh"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:orientation="horizontal">-->

    <!--                <RadioButton-->
    <!--                    android:id="@+id/radGioiTinhNam"-->
    <!--                    android:layout_width="wrap_content"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:layout_marginLeft="@dimen/size50dp"-->
    <!--                    android:textSize="@dimen/textSize20sp"-->
    <!--                    android:text="Nam"/>-->

    <!--                <RadioButton-->
    <!--                    android:id="@+id/radGioiTinhNu"-->
    <!--                    android:layout_width="wrap_content"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:layout_marginLeft="@dimen/size50dp"-->
    <!--                    android:textSize="@dimen/textSize20sp"-->
    <!--                    android:text="Nữ"/>-->
    <!--            </RadioGroup>-->

    <!--            <EditText-->
    <!--                android:id="@+id/edtNgaySinh"-->
    <!--                android:inputType="number"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="@dimen/size56dp"-->
    <!--                android:layout_margin="@dimen/size10dp"-->
    <!--                android:background="@color/white"-->
    <!--                android:drawableLeft="@drawable/calendar"-->
    <!--                android:drawablePadding="@dimen/size10dp"-->
    <!--                android:hint="@string/nhapNgaySinh"-->
    <!--                android:padding="@dimen/size10dp"-->
    <!--                android:singleLine="true"-->
    <!--                android:textColor="@color/black"-->
    <!--                android:textColorHint="@color/gray"/>-->

    <!--            <EditText-->
    <!--                android:id="@+id/edtEmail"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_margin="@dimen/size10dp"-->
    <!--                android:background="@color/white"-->
    <!--                android:drawableLeft="@drawable/gmail_48x48"-->
    <!--                android:drawablePadding="@dimen/size10dp"-->
    <!--                android:hint="@string/nhapEmail"-->
    <!--                android:padding="@dimen/size10dp"-->
    <!--                android:singleLine="true"-->
    <!--                android:textColor="@color/black"-->
    <!--                android:textColorHint="@color/gray"/>-->
    <!--        </LinearLayout>-->

    <!--        <LinearLayout-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:orientation="horizontal"-->
    <!--            android:layout_marginBottom="@dimen/size16dp"-->
    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintEnd_toEndOf="parent">-->

    <!--            <Button-->
    <!--                android:id="@+id/btnDongY"-->
    <!--                android:layout_width="0dp"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_margin="@dimen/size10dp"-->
    <!--                android:layout_weight="1"-->
    <!--                android:backgroundTint="@color/lime"-->
    <!--                android:padding="@dimen/size10dp"-->
    <!--                android:text="@string/dongY"/>-->

    <!--            <Button-->
    <!--                android:id="@+id/btnThoat"-->
    <!--                android:layout_width="0dp"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_margin="@dimen/size10dp"-->
    <!--                android:layout_weight="1"-->
    <!--                android:backgroundTint="@color/organe"-->
    <!--                android:padding="@dimen/size10dp"-->
    <!--                android:text="@string/thoat"/>-->
    <!--        </LinearLayout>-->

    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
    <!--</ScrollView>-->